[package]
name = "mlb"
version = "0.1.0"
authors = ["chris.henderson <chris@chenderson.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.106.0"
piston2d-graphics = "0.36.0"
piston-texture = "0.8.0"
image = "0.22.5"

serde_json = "1.0.47"
serde = { version = "1.0.104", features = ["derive"] }
hyper = "0.13.2"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full", "sync"] }
url = "2.1.1"
lazy_static = "1.4.0"
crossbeam-channel = "0.4.0"
